add mobile development and fixing ui

--- a/public/style2.css
+++ b/public/style2.css
@@ -181,7 +181,9 @@ h1 {
 }
 
 .result-buttons .nav-btn {
-    min-width: 150px;
+    flex: 1;
+    max-width: 200px;
+    min-width: 180px;
 }
 
 /* Style untuk link yang tampil seperti tombol */
